# cloud-inquisitor

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  README.rst  config.yaml  go.mod  go.sum  main.tf  regions.tf
.github/: ISSUE_TEMPLATE.md
backend/: MANIFEST.in  README.rst  manage.py  requirements.txt  setup.cfg  setup.py
backend/cloud_inquisitor/: __init__.py  app.py  cli.py  config.py  constants.py  database.py  db.py  exceptions.py  json_utils.py  log.py  utils.py  wrappers.py  wsgi.py
backend/cloud_inquisitor/data/migrations/: env.py
backend/cloud_inquisitor/data/migrations/versions/: 1edcdfbc7780_issueproperty_foreign_key.py  3fca8951cd76_new_enforcements_table.py  66ea04b45589_adding_issue_indexes.py  686dbbd19b95_initial_schema.py  a2e49567641a_add_templates_table.py  cfb0ed4cced9_new_accounts_table.py  e2de0ea03287_update_account_contacts_to_new_format.py  e445d703e60f_removing_partitions_adding_foreign_keys.py
backend/cloud_inquisitor/data/templates/: cloudtrail_sns_policy.json  domain_hijacking.html  domain_hijacking.txt  required_tags_alert.html  required_tags_alert.txt  required_tags_fixed.html  required_tags_fixed.txt  required_tags_notice.html  required_tags_notice.txt  syslog_format.json  unattached_ebs_volume.html  unattached_ebs_volume.txt  vpc_flow_logs_role_policy.json
backend/cloud_inquisitor/plugins/: __init__.py
backend/cloud_inquisitor/plugins/commands/: __init__.py  accounts.py  apiserver.py  auth.py  plugins.py  saml.py  scheduler.py  setup.py  userdata.py
backend/cloud_inquisitor/plugins/notifiers/: __init__.py  email.py  slack.py
backend/cloud_inquisitor/plugins/types/: accounts.py  enforcements.py  issues.py  resources.py
backend/cloud_inquisitor/plugins/views/: __init__.py  accounts.py  auditlog.py  config.py  emails.py  logs.py  metadata.py  roles.py  s3buckets.py  search.py  stats.py  templates.py  users.py
backend/cloud_inquisitor/schema/: __init__.py  accounts.py  base.py  enforcements.py  issues.py  resource.py
backend/docs/: Makefile  make.bat
backend/docs/source/: api_documentation.rst  authors.rst  conf.py  index.rst
backend/docs/source/cloud_inquisitor/: config.rst  constants.rst  exceptions.rst  json_utils.rst  log.rst  plugins.rst  schema.rst  utils.rst  wrappers.rst
backend/docs/source/cloud_inquisitor/auditors/: base.rst  cloudtrail.rst  domain_hijacking.rst  iam.rst  required_tags.rst  vpc_flow_logs.rst
backend/docs/source/cloud_inquisitor/auth/: base.rst  builtin.rst  saml.rst
backend/docs/source/cloud_inquisitor/collectors/: aws.rst  base.rst
backend/docs/source/cloud_inquisitor/commands/: accounts.rst  base.rst
backend/docs/source/cloud_inquisitor/notifiers/: base.rst  email.rst  slack.rst
backend/docs/source/cloud_inquisitor/types/: base.rst
backend/migrations/: env.py  script.py.mako
backend/settings/: config.py.example  logging.json  settings.json
backend/templates/: cloudtrail_s3_bucket_policy.json  required_tags_fixed.html  required_tags_fixed.txt  saml_settings.json  vpc_flow_logs_iam_role_trust.json
backend/tests/: conftest.py  run_tests.sh  test_auditor_aws_required_tags_e2e.py  test_awsaudits.py  test_cinq-auditor-aws-required-tags-ec2.py  test_cinq-auditor-aws-required-tags-s3.py  test_cinq-auditor-ebs.py  test_cinq-auditor-required-tags.py  test_cinq-collector-aws.py  test_cinq_auditor_aws_required_tags_e2e.py  test_cinq_auditor_aws_required_tags_ec2.py  test_cinq_auditor_aws_required_tags_generic.py  test_cinq_auditor_aws_required_tags_rds.py  test_cinq_auditor_aws_required_tags_s3.py  test_cinq_auditor_ebs.py  test_cinq_collector_aws.py
backend/tests/auth/: test_builtin.py
backend/tests/collectors/: test_ec2.py
backend/tests/libs/: cinq_test_cls.py  exceptions.py  lib_cinq_auditor_aws_required_tags.py  util_cinq.py  util_db.py  util_misc.py  util_mocks.py  util_provider_aws.py  var_const.py
backend/tests/service/: __init__.py  service.py
backend/tests/views/: test_ebs.py
cinq_resources/: resource.go  resource_test.go
cloud-inquisitor/: aws _cloudfront_resource.go  aws_cloudfront_resource.go  aws_cloudfront_resource_test.go  aws_elasticbeanstalk_resource.go  aws_metadata.go  aws_rds_resource.go  aws_route53_record_resource.go  aws_route53_record_resource_test.go  aws_route53_zone_resource.go  aws_route53_zone_resource_test.go  aws_s3_resource.go  aws_test_helpers.go  aws_utils.go  aws_utils_test.go  cinq_config.go  resource.go  resource_hijackable.go  resource_test.go  serverless_common.go  stub_resource.go
cmd/: database.go  database_drop.go  database_init.go  database_migrate.go  database_utils.go  dns_hijack.go  dns_hijack_http.go  dns_hijack_query.go  root.go
docker/: README.rst  (+7 more)
(+448 files in other folders)
