[metadata]
name = cloud_inquisitor
description-file = README.rst
author = Riot Games Security
author_email = security@riotgames.com
url = https://github.com/RiotGames/cloud-inquisitor
packages = find_packages(exclude=exclude_packages)
package_data = package_data
package_dir = {'cloud_inquisitor': 'cloud_inquisitor'}
include_package_data = True
zip_safe = False
install_requires = requires
entry_points = entry_points
license = ASL 2.0
classifiers=
    'Development Status :: 4 - Beta
    'Environment :: Console
    'Intended Audience :: Developers
    'Intended Audience :: Information Technology
    'Intended Audience :: System Administrators
    'License :: OSI Approved :: Apache Software License
    'Natural Language :: English
    'Programming Language :: Python :: 3.6
    'Topic :: System :: Installation/Setup
    'Topic :: Utilities

[files]
packages =
    cloud_inquisitor

[entry_points]
cloud_inquisitor.plugins.auditors =

cloud_inquisitor.plugins.auth =

cloud_inquisitor.plugins.collectors =

cloud_inquisitor.plugins.commands =
    add_account = cloud_inquisitor.plugins.commands.accounts:AddAccount
    delete_account = cloud_inquisitor.plugins.commands.accounts:DeleteAccount
    api_server = cloud_inquisitor.plugins.commands.apiserver:APIServer
    list_plugins = cloud_inquisitor.plugins.commands.plugins:ListPlugins
    scheduler = cloud_inquisitor.plugins.commands.scheduler:Scheduler
    worker = cloud_inquisitor.plugins.commands.scheduler:Worker
    userdata = cloud_inquisitor.plugins.commands.userdata:UserData
    setup = cloud_inquisitor.plugins.commands.setup:Setup
    auth = cloud_inquisitor.plugins.commands.auth:Auth

cloud_inquisitor.plugins.notifiers =
    email_notify = cloud_inquisitor.plugins.notifiers.email:EmailNotifier
    slack_notify = cloud_inquisitor.plugins.notifiers.slack:SlackNotifier

cloud_inquisitor.plugins.types =
    ec2instance_type = cloud_inquisitor.plugins.types.resources:EC2Instance
    beanstalk_type = cloud_inquisitor.plugins.types.resources:BeanStalk
    cloudfrontdist_type = cloud_inquisitor.plugins.types.resources:CloudFrontDist
    s3bucket_type = cloud_inquisitor.plugins.types.resources:S3Bucket
    ebssnapshot_type = cloud_inquisitor.plugins.types.resources:EBSSnapshot
    ebsvolume_type = cloud_inquisitor.plugins.types.resources:EBSVolume
    ami_type = cloud_inquisitor.plugins.types.resources:AMI
    dnszone_type = cloud_inquisitor.plugins.types.resources:DNSZone
    dnsrecord_type = cloud_inquisitor.plugins.types.resources:DNSRecord

cloud_inquisitor.plugins.schedulers =

cloud_inquisitor.plugins.views =
    account_list = cloud_inquisitor.plugins.views.accounts:AccountList
    account_details = cloud_inquisitor.plugins.views.accounts:AccountDetail
    search = cloud_inquisitor.plugins.views.search:Search
    stats = cloud_inquisitor.plugins.views.stats:StatsGet
    log = cloud_inquisitor.plugins.views.logs:Logs
    log_details = cloud_inquisitor.plugins.views.logs:LogDetails
    metadata = cloud_inquisitor.plugins.views.metadata:MetaData
    email_list = cloud_inquisitor.plugins.views.emails:EmailList
    email = cloud_inquisitor.plugins.views.emails:EmailGet
    config_list = cloud_inquisitor.plugins.views.config:ConfigList
    config = cloud_inquisitor.plugins.views.config:ConfigGet
    config_namespace_list = cloud_inquisitor.plugins.views.config:Namespaces
    config_namespace_get = cloud_inquisitor.plugins.views.config:NamespaceGet
    user_list = cloud_inquisitor.plugins.views.users:UserList
    user_details = cloud_inquisitor.plugins.views.users:UserDetails
    password_reset = cloud_inquisitor.plugins.views.users:PasswordReset
    role_list = cloud_inquisitor.plugins.views.roles:RoleList
    role_get = cloud_inquisitor.plugins.views.roles:RoleGet
    auditlog_list = cloud_inquisitor.plugins.views.auditlog:AuditLogList
    auditlog_get = cloud_inquisitor.plugins.views.auditlog:AuditLogGet


[flake8]
max-line-length = 120
exclude = build,migrations,settings,.eggs,test.py
# E402: module level import not at top of file
# F403: 'from module import *' used; unable to detect undefined names
# E704: multiple statements on one line (def)
# E701: multiple statements on one line (colon)
# F405: () may be undefined or defined from star import
ignore = E402,F403,E704,E701,F405

[tool:pytest]
# Using --cov cloud_inquisitor may break test debugging breakpoints in your IDE.
# Workaround by adding  --no-cov in IDE until https://youtrack.jetbrains.com/issue/PY-20186
addopts = --verbose --cov cloud_inquisitor --cov-report=xml --cov-report=term
testpaths = tests
